...
                }
            }
        }
    }
}

internal const val APP_USAGE_PERIOD_TAG = "app_usage_period"
internal const val APP_USAGE_RANKING_SELECTOR_TAG = "app_usage_ranking_selector"
internal const val APP_USAGE_VIEW_SELECTOR_TAG = "app_usage_view_selector"
internal const val APP_USAGE_TIME_VIEW_TAG = "app_usage_time_view"
internal const val APP_USAGE_DISPLAY_SHARE_VIEW_TAG = "app_usage_display_share_view"
internal const val APP_USAGE_TOTAL_SEGMENT_TAG = "app_usage_total_segment"
internal const val APP_USAGE_COVER_SEGMENT_TAG = "app_usage_cover_segment"
internal const val APP_USAGE_INNER_SEGMENT_TAG = "app_usage_inner_segment"
internal const val APP_USAGE_MAJORITY_SELECTOR_TAG = "app_usage_majority_selector"
internal const val APP_USAGE_COVER_MAJORITY_TAG = "app_usage_cover_majority"
internal const val APP_USAGE_INNER_MAJORITY_TAG = "app_usage_inner_majority"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
private fun AppRankingSelector(
    selectedView: AppRankingView,
    onViewSelected: (AppRankingView) -> Unit,
...
